# single-degree-of-freedom_mechanism_simulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  todo.txt
include/: RK4.H  application.h  body.h  draw.h  vector.h  vector2d.h
src/: RK4.c  application.c  body.c  draw.c  main.c  vector.c  vector2d.c
